fixed layout bug

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,12 @@
-body {
-  height: 100%;
+* {
+  margin: 0;
+  padding: 0;
 }
+html,
+body {
+  min-height: 100vh;
+}
+
 .rounded-card {
   border-radius: 1rem;
 
@@ -13,9 +19,15 @@ body {
   border: none;
 }
 // RANKING PAGE
+#ranking-page {
+  height: 100%;
+  .container {
+    width: 60%;
+  }
+}
 #ranking,
 #controls-section {
-  width: 60%;
+  width: 100%;
   margin: auto;
 }
 #cards-section {
